# gamma_burst

./: .gitignore  .wget-hsts  README.md  pyproject.toml
src/gamma_burst/: burst_analyser.py.py  eumerations.py  graph_recover.py  light_curve.py  spectra.py
