[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
requires-python = ">=3.11" 
name = "gamma_burst"
authors = [
    {name = "Arnaud SOMVILLE", email = "arnaud.somville@estaca.eu"},
]
version = "0.1.0"
dependencies = [
    "confz>=2.0.1",
    "pydantic>=2.6.4",
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "swifttools>=3.0.22",
    "matplotlib>=3.9.2",
]
description = "Compute gamma burst and makes curves"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.3",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pdm==2.12.4",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
]